@@ -49,8 +49,9 @@
         </document>
       </branch>
     </defaults>
-    <branch id="HEAD" stringfrozen="true"/>
-    <branch id="anjuta-2-2" />
+    <branch id="HEAD" stringfrozen="false"/>
+    <branch id="anjuta-2-2" stringfrozen="true"/>
+    <branch id="anjuta-2-4" stringfrozen="true"/>
   </module>
   <module id="atk">
     <branch id="HEAD" stringfrozen="true"/>
@@ -133,7 +134,8 @@
     <branch id="HEAD"/>
   </module>
   <module id="cheese">
-      <branch id="HEAD" stringfrozen="true"/>
+      <branch id="HEAD" stringfrozen="false"/>
+      <branch id="gnome-2-22" stringfrozen="true"/>
   </module>
   <module id="chronojump">
     <branch id="HEAD"/>
