@@ -551,7 +551,7 @@
       <_description>GNOME desktop</_description>
       <module id="alacarte"/>
       <module id="bug-buddy"/>
-      <module id="cheese"/>
+      <module id="cheese" branch="gnome-2-22"/>
       <module id="dasher"/>
       <module id="deskbar-applet"/>
       <module id="eel"/>
@@ -631,7 +631,7 @@
     <category id="devtools">
       <_description>Development Tools</_description>
       <module id="accerciser" branch="gnome-2-22"/>
-      <module id="anjuta"/>
+      <module id="anjuta" branch="anjuta-2-4"/>
       <module id="devhelp"/>
       <module id="gdl"/>
       <module id="glade3" branch="gnome-2-22"/>
