@@ -1,3 +1,9 @@
+2008-03-10  Johannes Schmid <jhs@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	Updated branches for cheese and anjuta
+
 2008-03-10  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
